# viewtube

./: .gitignore  Cargo.toml  README.md  app.js  cleanup-repo.sh  cypress.config.js  index.html  jest.config.js  package-lock.json  package.json  pageHome.js  pageViewer.js  release-public-key.json  setup-software.sh  setup_software.sh  styles.css  sw.js  userData.js
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
cypress/e2e/: home.cy.js  watch.cy.js
cypress/fixtures/: bootstrap.json  comments_abc123.json  video_abc123.json
cypress/support/: e2e.js
src/: config.rs  lib.rs  metadata.rs  security.rs
tests/js/: apiClient.test.js  appRouter.test.js  databaseManager.test.js  pageHomeComponents.test.js  pageViewer.test.js  setupTests.js  sw.test.js  userDataStore.test.js
