[package]
name = "newtube-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = { version = "0.4.42", features = ["serde"] }
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "signal", "fs", "sync", "net"] }
tokio-util = { version = "0.7.17", features = ["io"] }
parking_lot = "0.12.5"
mime_guess = "2.0.5"
