[package]
name = "newtube-tools"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
chrono = { version = "0.4.42", features = ["serde"] }
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "signal", "fs", "sync", "net"] }
tokio-util = { version = "0.7.17", features = ["io"] }
parking_lot = "0.12.5"
mime_guess = "2.0.5"
clap = { version = "4.5.51", features = ["derive"] }
toml = "0.9.8"
nix = { version = "0.29", default-features = false, features = ["user"] }
tempfile = "3.23.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
blake3 = "1.5.1"
ureq = { version = "2.10.1", features = ["json"] }
flate2 = "1.0.30"
tar = "0.4.41"
base64 = "0.22.1"

[dev-dependencies]
